# hyper-mcp-search

./: Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: browse.rs  lib.rs  pdk.rs  searxng.rs
