[package]
name = "hyper-mcp-search"
version = "0.1.1"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
base64-serde = "0.8.0"
anyhow = "1.0"
url = "2.0"
html2md = "0.2"
